--- a/monteCarloLattice.ipynb
+++ b/monteCarloLattice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMln9pYgvhac42vClTFdCf",
+      "authorship_tag": "ABX9TyPHNAE5Y4lxywadNzWElVqU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,10 +57,12 @@
         "import math\n",
         "import random\n",
         "\n",
+        "#Define T variable and size. Create and initialize lattice\n",
         "T = 2.3\n",
         "size = 8\n",
         "lattice = [[random.choice([1, -1]) for _ in range(size)] for _ in range(size)]\n",
         "\n",
+        "#create calculate_energy function. Get values of all the neighbors of selected element in lattice. Calculate the energy.\n",
         "def calculate_energy(lattice, row, col):\n",
         "    size = len(lattice)\n",
         "    current_index = lattice[row][col]\n",
@@ -74,6 +76,8 @@
         "    energy = current_index * neighbors_sum\n",
         "    return energy\n",
         "\n",
+        "#Randomly choose one element in the lattice and flip the value (-1 to 1, 1 to -1). If change in energy is less than 0, pass it,\n",
+        "#otherwise, accept with probability exp(-ΔE / T)\n",
         "steps = 2000000\n",
         "for step in range(steps):\n",
         "  row = random.randint(0, size -1)\n",
@@ -82,9 +86,9 @@
         "  previous_energy = calculate_energy(lattice, row, col)\n",
         "  lattice[row][col] *= -1\n",
         "\n",
-        "  new_energy = calculate_energy(lattice, row, col)\n",
+        "  new_energy = calculate_energy(lattice, row, col) #Calculate new energy\n",
         "\n",
-        "  change_energy = new_energy - previous_energy\n",
+        "  change_energy = new_energy - previous_energy #Calculate ΔE\n",
         "\n",
         "\n",
         "  if change_energy < 0:\n",
@@ -95,7 +99,7 @@
         "        lattice[row][col] *= -1\n",
         "\n",
         "\n",
-        "\n",
+        "#Print out lattice\n",
         "for row in lattice:\n",
         "    print(\" \".join(f\"{x:+2d}\" for x in row))\n"
       ]
