--- a/monteCarloLattice.ipynb
+++ b/monteCarloLattice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHNAE5Y4lxywadNzWElVqU",
+      "authorship_tag": "ABX9TyOxsAZKuPwXKA9i1xxhrpK0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,27 +28,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DQCXqqaF23x-",
-        "outputId": "c47ff71f-511b-4f38-9678-a2eb8c57307f"
+        "outputId": "712bfa98-e92e-463f-fbf9-1ee73ab8e143"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "-1 +1 -1 +1 -1 +1 -1 +1\n",
             "+1 -1 +1 -1 +1 -1 +1 -1\n",
             "-1 +1 -1 +1 -1 +1 -1 +1\n",
-            "+1 -1 +1 -1 +1 -1 -1 -1\n",
+            "+1 -1 -1 -1 +1 -1 +1 -1\n",
             "-1 +1 -1 +1 -1 +1 -1 +1\n",
-            "+1 -1 +1 -1 +1 +1 +1 -1\n",
-            "-1 +1 -1 -1 -1 +1 -1 +1\n",
-            "+1 -1 +1 +1 +1 -1 +1 -1\n",
-            "-1 +1 -1 +1 -1 +1 -1 -1\n"
+            "+1 -1 +1 -1 +1 -1 +1 +1\n",
+            "-1 +1 -1 +1 -1 +1 +1 +1\n",
+            "+1 -1 +1 -1 +1 -1 +1 -1\n"
           ]
         }
       ],
@@ -78,7 +78,7 @@
         "\n",
         "#Randomly choose one element in the lattice and flip the value (-1 to 1, 1 to -1). If change in energy is less than 0, pass it,\n",
         "#otherwise, accept with probability exp(-ΔE / T)\n",
-        "steps = 2000000\n",
+        "steps = 2005000\n",
         "for step in range(steps):\n",
         "  row = random.randint(0, size -1)\n",
         "  col = random.randint(0, size -1)\n",
@@ -107,19 +107,96 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "import numpy as np\n",
+        "import math\n",
+        "import random\n",
+        "\n",
+        "#Define T variable and size. Create and initialize lattice\n",
+        "T = 2.3\n",
+        "size = 8\n",
+        "P = 1/8\n",
+        "num_holes = int(size * size * P)\n",
+        "\n",
+        "lattice = [[random.choice([1, -1]) for _ in range(size)] for _ in range(size)]\n",
+        "\n",
+        "def can_place_hole(lattice, row, col):\n",
+        "  if lattice[row][col] == 0:\n",
+        "    return False\n",
+        "\n",
+        "  neighbors = [(row, (col-1) % size), (row, (col+1) % size)]\n",
+        "  for row, col in neighbors:\n",
+        "        if 0 <= row < size and 0 <= col < size:\n",
+        "            if lattice[row][col] == 0:\n",
+        "                return False\n",
+        "  return True\n",
+        "\n",
+        "holes_placed = 0\n",
+        "while holes_placed < num_holes:\n",
+        "    row = random.randint(0, size-1)\n",
+        "    col = random.randint(0, size-1)\n",
+        "    if can_place_hole(lattice, row, col):\n",
+        "        lattice[row][col] = 0\n",
+        "        holes_placed += 1\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "#create calculate_energy function. Get values of all the neighbors of selected element in lattice. Calculate the energy.\n",
+        "def calculate_energy(lattice, row, col):\n",
+        "    size = len(lattice)\n",
+        "    current_index = lattice[row][col]\n",
+        "    up = lattice[(row - 1) % size][col]\n",
+        "    down = lattice[(row + 1) % size][col]\n",
+        "    left = lattice[row][(col - 1) % size]\n",
+        "    right = lattice[row][(col + 1) % size]\n",
+        "\n",
+        "    neighbors_sum = up + down + left + right\n",
+        "\n",
+        "    energy = current_index * neighbors_sum\n",
+        "    return energy\n",
+        "\n",
+        "\n",
+        "steps = 1\n",
+        "for step in range(steps):\n",
+        "  row = random.randint(0, size -1)\n",
+        "  col = random.randint(0, size -1)\n",
+        "\n",
+        "\n",
+        "\n",
+        "#Print out lattice\n",
+        "for row in lattice:\n",
+        "    print(\" \".join(f\"{x:+2d}\" for x in row))\n"
       ],
       "metadata": {
-        "id": "ymiHaVqad96q"
+        "id": "rHGdSKyYgvKE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "493a3600-71e0-49ef-f4e5-c311ec275f1c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+1 +1 -1 +1 +1 -1 +0 +1\n",
+            "-1 -1 -1 -1 +1 -1 -1 +1\n",
+            "+1 -1 +0 -1 +1 -1 -1 -1\n",
+            "+1 -1 +1 -1 +1 +1 -1 -1\n",
+            "+0 +1 +0 -1 -1 +0 +1 +1\n",
+            "-1 +0 +1 -1 +1 -1 +1 +1\n",
+            "+0 -1 -1 -1 +0 +1 -1 +1\n",
+            "+1 +1 -1 -1 -1 +1 +1 +1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "rHGdSKyYgvKE"
+        "id": "6UfQ7tKgDWWA"
       },
       "execution_count": null,
       "outputs": []
