Sorting Energy with holes

--- a/monteCarloLattice.ipynb
+++ b/monteCarloLattice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxsAZKuPwXKA9i1xxhrpK0",
+      "authorship_tag": "ABX9TyMC1Fc1NmQdgtwUWZgpDtnS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -116,24 +116,27 @@
         "size = 8\n",
         "P = 1/8\n",
         "num_holes = int(size * size * P)\n",
+        "U = 2\n",
         "\n",
         "lattice = [[random.choice([1, -1]) for _ in range(size)] for _ in range(size)]\n",
         "\n",
-        "def can_place_hole(lattice, row, col):\n",
-        "  if lattice[row][col] == 0:\n",
+        "def can_place_hole(lattice, r, c):\n",
+        "  if lattice[r][c] == 0:\n",
         "    return False\n",
         "\n",
-        "  neighbors = [(row, (col-1) % size), (row, (col+1) % size)]\n",
-        "  for row, col in neighbors:\n",
-        "        if 0 <= row < size and 0 <= col < size:\n",
-        "            if lattice[row][col] == 0:\n",
-        "                return False\n",
+        "  neighbors = [(r, (c-1) % size), (r, (c+1) % size)]\n",
+        "  for nr, nc in neighbors:\n",
+        "    if lattice[nr][nc] == 0:\n",
+        "      return False\n",
         "  return True\n",
         "\n",
         "holes_placed = 0\n",
         "while holes_placed < num_holes:\n",
         "    row = random.randint(0, size-1)\n",
         "    col = random.randint(0, size-1)\n",
+        "    if lattice[row][col] == 0:\n",
+        "      continue\n",
+        "\n",
         "    if can_place_hole(lattice, row, col):\n",
         "        lattice[row][col] = 0\n",
         "        holes_placed += 1\n",
@@ -142,24 +145,51 @@
         "\n",
         "\n",
         "#create calculate_energy function. Get values of all the neighbors of selected element in lattice. Calculate the energy.\n",
-        "def calculate_energy(lattice, row, col):\n",
+        "def calculate_energy(lattice, r, c):\n",
         "    size = len(lattice)\n",
-        "    current_index = lattice[row][col]\n",
-        "    up = lattice[(row - 1) % size][col]\n",
-        "    down = lattice[(row + 1) % size][col]\n",
-        "    left = lattice[row][(col - 1) % size]\n",
-        "    right = lattice[row][(col + 1) % size]\n",
+        "    current_index = lattice[r][c]\n",
         "\n",
-        "    neighbors_sum = up + down + left + right\n",
+        "    if current_index == 0:\n",
+        "        return 0\n",
         "\n",
-        "    energy = current_index * neighbors_sum\n",
+        "    neighbors = [\n",
+        "        lattice[(r - 1) % size][c],\n",
+        "        lattice[(r + 1) % size][c],\n",
+        "        lattice[r][(c - 1) % size],\n",
+        "        lattice[r][(c + 1) % size],\n",
+        "    ]\n",
+        "\n",
+        "    neighbors_sum = sum(n for n in neighbors if n != 0)\n",
+        "\n",
+        "    energy = U * current_index * neighbors_sum\n",
         "    return energy\n",
         "\n",
         "\n",
-        "steps = 1\n",
+        "steps = 3005000\n",
         "for step in range(steps):\n",
         "  row = random.randint(0, size -1)\n",
         "  col = random.randint(0, size -1)\n",
+        "\n",
+        "  if lattice[row][col] == 0:\n",
+        "    continue\n",
+        "\n",
+        "  old_spin = lattice[row][col]\n",
+        "\n",
+        "  previous_energy = calculate_energy(lattice, row, col)\n",
+        "  lattice[row][col] *= -1\n",
+        "\n",
+        "\n",
+        "  new_energy = calculate_energy(lattice, row, col) #Calculate new energy\n",
+        "\n",
+        "  change_energy = new_energy - previous_energy #Calculate ΔE\n",
+        "\n",
+        "\n",
+        "  if change_energy < 0:\n",
+        "        pass\n",
+        "  else:\n",
+        "    P = math.exp(-change_energy / T)\n",
+        "    if random.random() >= P:\n",
+        "        lattice[row][col] *= -1\n",
         "\n",
         "\n",
         "\n",
@@ -172,22 +202,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "493a3600-71e0-49ef-f4e5-c311ec275f1c"
+        "outputId": "e30d9cb4-88a1-4741-a9e6-d18b87d16a74"
       },
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+1 +1 -1 +1 +1 -1 +0 +1\n",
-            "-1 -1 -1 -1 +1 -1 -1 +1\n",
-            "+1 -1 +0 -1 +1 -1 -1 -1\n",
-            "+1 -1 +1 -1 +1 +1 -1 -1\n",
-            "+0 +1 +0 -1 -1 +0 +1 +1\n",
-            "-1 +0 +1 -1 +1 -1 +1 +1\n",
-            "+0 -1 -1 -1 +0 +1 -1 +1\n",
-            "+1 +1 -1 -1 -1 +1 +1 +1\n"
+            "-1 +1 -1 +0 -1 +1 +0 +1\n",
+            "+1 -1 +0 -1 +1 -1 +1 +0\n",
+            "+0 +1 -1 +1 -1 +1 +1 +1\n",
+            "+0 -1 +1 -1 +1 -1 +1 -1\n",
+            "-1 +1 -1 +1 -1 +1 -1 +1\n",
+            "+1 -1 +1 -1 +1 -1 +1 -1\n",
+            "+0 +1 -1 +1 -1 +0 -1 +1\n",
+            "+1 -1 +1 -1 +1 -1 +1 -1\n"
           ]
         }
       ]
