--- a/monteCarloLattice.ipynb
+++ b/monteCarloLattice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMC1Fc1NmQdgtwUWZgpDtnS",
+      "authorship_tag": "ABX9TyOMt/H18UawNDGLmqmGDjV2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,31 +28,132 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import numpy as np\n",
+        "import math\n",
+        "import random\n",
+        "\n",
+        "#Define T variable and size. Create and initialize lattice\n",
+        "T = 2.3\n",
+        "size = 8\n",
+        "P = 1/8\n",
+        "num_holes = int(size * size * P)\n",
+        "U = 2\n",
+        "\n",
+        "lattice = [[random.choice([1, -1]) for _ in range(size)] for _ in range(size)]\n",
+        "\n",
+        "def can_place_hole(lattice, r, c):\n",
+        "  if lattice[r][c] == 0:\n",
+        "    return False\n",
+        "\n",
+        "  neighbors = [\n",
+        "        ((r - 1) % size, c),\n",
+        "        ((r + 1) % size, c),\n",
+        "        (r, (c - 1) % size),\n",
+        "        (r, (c + 1) % size),\n",
+        "    ]\n",
+        "\n",
+        "  for nr, nc in neighbors:\n",
+        "    if lattice[nr][nc] == 0:\n",
+        "      return False\n",
+        "  return True\n",
+        "\n",
+        "holes_placed = 0\n",
+        "while holes_placed < num_holes:\n",
+        "    row = random.randint(0, size-1)\n",
+        "    col = random.randint(0, size-1)\n",
+        "    if lattice[row][col] == 0:\n",
+        "      continue\n",
+        "\n",
+        "    if can_place_hole(lattice, row, col):\n",
+        "        lattice[row][col] = 0\n",
+        "        holes_placed += 1\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "#create calculate_energy function. Get values of all the neighbors of selected element in lattice. Calculate the energy.\n",
+        "def calculate_energy(lattice, r, c):\n",
+        "    size = len(lattice)\n",
+        "    current_index = lattice[r][c]\n",
+        "\n",
+        "    if current_index == 0:\n",
+        "        return 0\n",
+        "\n",
+        "    neighbors = [\n",
+        "        lattice[(r - 1) % size][c],\n",
+        "        lattice[(r + 1) % size][c],\n",
+        "        lattice[r][(c - 1) % size],\n",
+        "        lattice[r][(c + 1) % size],\n",
+        "    ]\n",
+        "\n",
+        "    neighbors_sum = sum(n for n in neighbors if n != 0)\n",
+        "\n",
+        "    energy = -U * current_index * neighbors_sum\n",
+        "    return energy\n",
+        "\n",
+        "\n",
+        "steps = 3005000\n",
+        "for step in range(steps):\n",
+        "  row = random.randint(0, size -1)\n",
+        "  col = random.randint(0, size -1)\n",
+        "\n",
+        "  if lattice[row][col] == 0:\n",
+        "    continue\n",
+        "\n",
+        "  old_spin = lattice[row][col]\n",
+        "\n",
+        "  previous_energy = calculate_energy(lattice, row, col)\n",
+        "  lattice[row][col] *= -1\n",
+        "\n",
+        "\n",
+        "  new_energy = calculate_energy(lattice, row, col) #Calculate new energy\n",
+        "\n",
+        "  change_energy = new_energy - previous_energy #Calculate ΔE\n",
+        "\n",
+        "\n",
+        "  if change_energy < 0:\n",
+        "        pass\n",
+        "  else:\n",
+        "    accept_probablility = math.exp(-change_energy / T)\n",
+        "    if random.random() >= accept_probablility:\n",
+        "        lattice[row][col] *= -1\n",
+        "\n",
+        "\n",
+        "\n",
+        "#Print out lattice\n",
+        "for row in lattice:\n",
+        "    print(\" \".join(f\"{x:+2d}\" for x in row))\n"
+      ],
       "metadata": {
+        "id": "rHGdSKyYgvKE",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "DQCXqqaF23x-",
-        "outputId": "712bfa98-e92e-463f-fbf9-1ee73ab8e143"
+        "outputId": "f78fcd52-b6ea-4e99-8785-f5d563dcb383"
       },
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "-1 +1 -1 +1 -1 +1 -1 +0\n",
+            "+1 +0 +1 -1 +1 +0 +1 -1\n",
             "-1 +1 -1 +1 -1 +1 -1 +1\n",
-            "+1 -1 +1 -1 +1 -1 +1 -1\n",
-            "-1 +1 -1 +1 -1 +1 -1 +1\n",
-            "+1 -1 -1 -1 +1 -1 +1 -1\n",
-            "-1 +1 -1 +1 -1 +1 -1 +1\n",
-            "+1 -1 +1 -1 +1 -1 +1 +1\n",
-            "-1 +1 -1 +1 -1 +1 +1 +1\n",
+            "+1 -1 +1 +0 +1 -1 +1 -1\n",
+            "-1 +1 +0 +1 -1 +1 -1 +1\n",
+            "+1 +0 +1 -1 +1 -1 +1 -1\n",
+            "-1 +1 +0 +1 -1 +1 +0 +1\n",
             "+1 -1 +1 -1 +1 -1 +1 -1\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
+        "\n",
         "import numpy as np\n",
         "import math\n",
         "import random\n",
@@ -101,130 +202,8 @@
         "\n",
         "#Print out lattice\n",
         "for row in lattice:\n",
-        "    print(\" \".join(f\"{x:+2d}\" for x in row))\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "import math\n",
-        "import random\n",
-        "\n",
-        "#Define T variable and size. Create and initialize lattice\n",
-        "T = 2.3\n",
-        "size = 8\n",
-        "P = 1/8\n",
-        "num_holes = int(size * size * P)\n",
-        "U = 2\n",
-        "\n",
-        "lattice = [[random.choice([1, -1]) for _ in range(size)] for _ in range(size)]\n",
-        "\n",
-        "def can_place_hole(lattice, r, c):\n",
-        "  if lattice[r][c] == 0:\n",
-        "    return False\n",
-        "\n",
-        "  neighbors = [(r, (c-1) % size), (r, (c+1) % size)]\n",
-        "  for nr, nc in neighbors:\n",
-        "    if lattice[nr][nc] == 0:\n",
-        "      return False\n",
-        "  return True\n",
-        "\n",
-        "holes_placed = 0\n",
-        "while holes_placed < num_holes:\n",
-        "    row = random.randint(0, size-1)\n",
-        "    col = random.randint(0, size-1)\n",
-        "    if lattice[row][col] == 0:\n",
-        "      continue\n",
-        "\n",
-        "    if can_place_hole(lattice, row, col):\n",
-        "        lattice[row][col] = 0\n",
-        "        holes_placed += 1\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "#create calculate_energy function. Get values of all the neighbors of selected element in lattice. Calculate the energy.\n",
-        "def calculate_energy(lattice, r, c):\n",
-        "    size = len(lattice)\n",
-        "    current_index = lattice[r][c]\n",
-        "\n",
-        "    if current_index == 0:\n",
-        "        return 0\n",
-        "\n",
-        "    neighbors = [\n",
-        "        lattice[(r - 1) % size][c],\n",
-        "        lattice[(r + 1) % size][c],\n",
-        "        lattice[r][(c - 1) % size],\n",
-        "        lattice[r][(c + 1) % size],\n",
-        "    ]\n",
-        "\n",
-        "    neighbors_sum = sum(n for n in neighbors if n != 0)\n",
-        "\n",
-        "    energy = U * current_index * neighbors_sum\n",
-        "    return energy\n",
-        "\n",
-        "\n",
-        "steps = 3005000\n",
-        "for step in range(steps):\n",
-        "  row = random.randint(0, size -1)\n",
-        "  col = random.randint(0, size -1)\n",
-        "\n",
-        "  if lattice[row][col] == 0:\n",
-        "    continue\n",
-        "\n",
-        "  old_spin = lattice[row][col]\n",
-        "\n",
-        "  previous_energy = calculate_energy(lattice, row, col)\n",
-        "  lattice[row][col] *= -1\n",
-        "\n",
-        "\n",
-        "  new_energy = calculate_energy(lattice, row, col) #Calculate new energy\n",
-        "\n",
-        "  change_energy = new_energy - previous_energy #Calculate ΔE\n",
-        "\n",
-        "\n",
-        "  if change_energy < 0:\n",
-        "        pass\n",
-        "  else:\n",
-        "    P = math.exp(-change_energy / T)\n",
-        "    if random.random() >= P:\n",
-        "        lattice[row][col] *= -1\n",
-        "\n",
-        "\n",
-        "\n",
-        "#Print out lattice\n",
-        "for row in lattice:\n",
-        "    print(\" \".join(f\"{x:+2d}\" for x in row))\n"
+        "    print(\" \".join(f\"{x:+2d}\" for x in row))"
       ],
-      "metadata": {
-        "id": "rHGdSKyYgvKE",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e30d9cb4-88a1-4741-a9e6-d18b87d16a74"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "-1 +1 -1 +0 -1 +1 +0 +1\n",
-            "+1 -1 +0 -1 +1 -1 +1 +0\n",
-            "+0 +1 -1 +1 -1 +1 +1 +1\n",
-            "+0 -1 +1 -1 +1 -1 +1 -1\n",
-            "-1 +1 -1 +1 -1 +1 -1 +1\n",
-            "+1 -1 +1 -1 +1 -1 +1 -1\n",
-            "+0 +1 -1 +1 -1 +0 -1 +1\n",
-            "+1 -1 +1 -1 +1 -1 +1 -1\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
       "metadata": {
         "id": "6UfQ7tKgDWWA"
       },
